# SplitLib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  README.md  README_8md.html  annotated.html  btree_8h.html  btree_8h__dep__incl.map  btree_8h__dep__incl.md5  btree_8h__incl.map  btree_8h__incl.md5  btree_8h_source.html  classThreadPool-members.html  classThreadPool.html  classes.html  classsplat_1_1BTree-members.html  classsplat_1_1BTree.html  classsplat_1_1BTree__coll__graph.map  classsplat_1_1BTree__coll__graph.md5  classsplat_1_1CompressedChunk-members.html  classsplat_1_1CompressedChunk.html  classsplat_1_1Crc-members.html  classsplat_1_1Crc.html  classsplat_1_1DataTable-members.html  classsplat_1_1DataTable.html  classsplat_1_1KdTree-members.html  classsplat_1_1KdTree.html  classsplat_1_1Logger-members.html  classsplat_1_1Logger.html  classsplat_1_1Octree-members.html  classsplat_1_1Octree.html  classsplat_1_1ZipEntry-members.html  classsplat_1_1ZipEntry.html  classsplat_1_1ZipReader-members.html  classsplat_1_1ZipReader.html  classsplat_1_1ZipWriter-members.html  classsplat_1_1ZipWriter.html  combine_8h.html  combine_8h_source.html  (+282 more)
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  gpudevice.h  main.cpp  options.h  process.cpp  process.h  writer.cpp
cmake/: SplatConfig.cmake.in
docs/: ply.md  sog.md
include/: CMakeLists.txt
include/splat/: crc.h  data_table.h  lcc.h  logger.h  sog.h  splat.h  splat_version.h.in  strings.h  types.h  webp-codec.h  zip_reader.h  zip_writer.h
include/splat/gpu/: gpu-clustering.cuh
include/splat/io/: ply_reader.h
include/splat/maths/: b-tree.h  btree.h  kdtree.h  kmeans.h  maths.h  morton-order.h  rotate-sh.h
include/splat/models/: data-table.h  lcc.h  morton-order.h  ply.h  sog.h
include/splat/readers/: decompress_ply.h  ksplat_reader.h  lcc_reader.h  ply_reader.h  sog_reader.h  splat_reader.h  spz_reader.h  webp-codec.h
include/splat/spatial/: btree.h  kdtree.h  kmeans.h  octree.h
include/splat/utils/: crc.h  logger.h  threadpool.h  webp-codec.h  zip-reader.h  zip-writer.h
include/splat/writers/: compressed_chunk.h  compressed_ply_writer.h  csv_writer.h  lod_writer.h  ply_writer.h  sog_writer.h
python/: CMakeLists.txt  binding.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  (+66 more)
src/: CMakeLists.txt  crc.cpp  data_table.cpp  logger.cpp  sog.cpp  webp-codec.cpp  zip_reader.cpp  zip_writer.cpp
src/gpu/: gpu-clustering.cu
src/io/: ply_reader.cpp  sog_reader.cpp  sog_writer.cpp
src/maths/: btree.cpp  kdtree.cpp  kmeans.cpp  morton-order.cu  rotate-sh.cpp
src/models/: data-table.cpp  morton-order.cpp  sog.cpp
src/readers/: decompress_ply.cpp  ksplat_reader.cpp  lcc_reader.cpp  ply_reader.cpp  sog_reader.cpp  splat_reader.cpp  spz_reader.cpp  webp-codec.cpp
src/spatial/: btree.cpp  kdtree.cpp  kmeans.cu  octree.cpp
src/utils/: crc.cpp  webp-codec.cpp  zip-reader.cpp  zip-writer.cpp
src/writers/: compressed_chunk.cpp  compressed_ply_writer.cpp  csv_writer.cpp  lod_writer.cpp  ply_writer.cpp  sog_writer.cpp
transform/: reader.cpp
